# vision-for-deepseek

./: .env.example  .gitignore  CLAUDE.md  README.md  SKILL.md  config.example.yaml  pyproject.toml
src/vision_bridge/: __init__.py  cli.py  config.py  core.py  exceptions.py  formatter.py  types.py
src/vision_bridge/providers/: __init__.py  base.py  claude.py  doubao.py  ollama.py  openai.py  qwen.py
tests/: conftest.py  test_config.py  test_core.py  test_formatter.py
tests/providers/: test_claude.py  test_doubao.py  test_ollama.py  test_openai.py  test_qwen.py
