[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-bridge"
version = "1.0.0"
description = "视觉桥接工具 - 为 DeepSeek 提供多模态识图能力"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "jingrongx"},
]
keywords = ["deepseek", "vision", "multimodal", "image-description", "ocr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.30.0"]
openai = ["openai>=1.30.0"]
doubao = ["openai>=1.30.0"]
qwen = ["openai>=1.30.0"]
all = ["anthropic>=0.30.0", "openai>=1.30.0"]

[project.scripts]
vision-bridge = "vision_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vision_bridge = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
